<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="Information delivery">

        <ListPreference
                app:defaultValue="@string/pref_fetch_option_1_min_value"
                app:title="@string/pref_fetch_option_label"
                app:entries="@array/pref_fetch_options_label"
                app:entryValues="@array/pref_fetch_options_values"
                app:key="@string/pref_fetch_option_key"
        />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="About">
        <Preference android:title="@string/pref_about_us">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/pref_about_us_url"/>
        </Preference>

        <Preference android:title="@string/pref_contact_us">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/pref_contact_us_url"/>
        </Preference>

        <Preference android:key="@string/pref_app_version_key"/>

    </PreferenceCategory>
</PreferenceScreen>