<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/dashboardFragment"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/menu_dashboard"/>
        <item
                android:icon="@drawable/ic_message_black_24dp"
                android:title="@string/menu_send_message"/>
        <item
                android:icon="@drawable/ic_description_black_24dp"
                android:title="@string/menu_attachment"/>
        <item
                android:icon="@drawable/ic_folder_open_black_24dp"
                android:title="@string/menu_file_management"/>

        <item
                android:id="@+id/announcementFragment"
                android:icon="@drawable/ic_radio_black_24dp"
                android:title="@string/menu_announcement"/>
        <item
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="@string/menu_parent_complaints"/>

        <item
                android:id="@+id/changePasswordFragment"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/menu_change_password"/>
    </group>



</menu>
