<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ui.teacher.fragment.FileManagementFragment">
  <LinearLayout android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
      <Button
              android:text="@string/label_btn_assignment_pdf"
              android:layout_width="match_parent"
              android:layout_marginTop="50dp"
              android:layout_marginStart="40dp"
              android:layout_marginEnd="40dp"
              android:layout_marginBottom="20dp"
              android:layout_gravity="center_horizontal"
              android:layout_height="@dimen/button_height_medium" android:id="@+id/btn_assingment_pdf"/>
      <Button
              android:text="@string/label_btn_assignment_image"
              android:layout_width="match_parent"
              android:layout_height="@dimen/button_height_medium"
              android:layout_marginStart="40dp"
              android:layout_marginEnd="40dp"
              android:layout_marginBottom="20dp"
              android:layout_gravity="center_horizontal"
              android:id="@+id/btn_assignment_image"/>
      <Button
              android:text="@string/label_btn_report_pdf"
              android:layout_width="match_parent"
              android:layout_gravity="center_horizontal"
              android:layout_marginStart="40dp"
              android:layout_marginBottom="20dp"
              android:layout_marginEnd="40dp"
              android:layout_height="@dimen/button_height_medium" android:id="@+id/btn_report_pdf"/>
      <Button
              android:text="@string/label_btn_report_image"
              android:layout_width="match_parent"
              android:layout_marginStart="40dp"
              android:layout_marginEnd="40dp"
              android:layout_marginBottom="20dp"
              android:layout_gravity="center_horizontal"
              android:layout_height="@dimen/button_height_medium" android:id="@+id/btn_report_image"/>

  </LinearLayout>
</ScrollView>