<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:padding="24dp" android:layout_width="match_parent"
                tools:context=".ui.fragment.ChangePasswordFragment"
                android:layout_centerInParent="true"
                android:layout_height="match_parent">


    <EditText android:layout_width="match_parent"
              android:id="@+id/et_old_password"
              android:padding="16dp"
              android:layout_marginTop="16dp"
              android:inputType="textPassword"
              android:hint="@string/hint_input_old_password"
              android:background="@drawable/square_edit_text"
              android:layout_height="wrap_content" tools:ignore="Autofill"/>


    <EditText android:layout_width="match_parent"
              android:id="@+id/et_new_password"
              android:padding="16dp"
              android:layout_marginTop="16dp"
              android:layout_below="@id/et_old_password"
              android:inputType="textPassword"
              android:hint="@string/hint_input_new_password"
              android:background="@drawable/square_edit_text"
              android:layout_height="wrap_content" tools:ignore="Autofill"/>

    <EditText android:layout_width="match_parent"
              android:id="@+id/et_confirm_password"
              android:padding="16dp"
              android:layout_marginTop="16dp"
              android:layout_below="@id/et_new_password"
              android:inputType="textPassword"
              android:hint="@string/hint_input_confirm_password"
              android:background="@drawable/square_edit_text"
              android:layout_height="wrap_content" tools:ignore="Autofill"/>

    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:padding="16dp"
            android:id="@+id/btn_reset_password"
            android:layout_marginTop="16dp"
            android:layout_below="@id/et_confirm_password"
            android:text="@string/label_button_change_password"
            android:layout_height="wrap_content"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" />

</RelativeLayout>