<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="#F1F9FF"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="match_parent">

            <ImageView android:layout_width="wrap_content"
                       android:id="@+id/img_item_logo"
                       tools:src="@drawable/ic_picture_as_pdf_black_24dp"
                       android:tint="@android:color/holo_red_light"
                       android:layout_height="wrap_content"
                       android:contentDescription="@string/des_icon"/>

            <TextView android:layout_width="wrap_content"
                      tools:text="Subject"
                      android:id="@+id/tv_item_subject"
                      android:layout_below="@id/img_item_logo"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      tools:text="Filename"
                      android:id="@+id/tv_item_name"
                      android:maxLines="1"
                      android:ellipsize="end"
                      android:layout_below="@id/tv_item_subject"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      tools:text="Filename"
                      android:id="@+id/tv_item_file_name"
                      android:maxLines="1"
                      android:ellipsize="end"
                      android:layout_below="@id/tv_item_name"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      tools:text="2019-05-02"
                      android:id="@+id/tv_item_date"
                      android:layout_below="@id/tv_item_file_name"
                      android:layout_marginBottom="5dp"
                      android:layout_height="wrap_content"/>
            <Button
                    android:text="@string/label_btn_download"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/tv_item_date"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content" android:id="@+id/btn_download"/>

            <Button
                    android:text="@string/label_btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_below="@id/tv_item_date"
                    android:layout_height="wrap_content" android:id="@+id/btn_delete"/>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</FrameLayout>